--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,11 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=bitcoin-balance.keystore
+
+ MYAPP_UPLOAD_KEY_ALIAS=bitcoinBalance
+
+ MYAPP_UPLOAD_STORE_PASSWORD=***
+
+ MYAPP_UPLOAD_KEY_PASSWORD=***
