--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <uses-permission android:name="android.permission.INTERNET" />
-  <uses-feature android:name="android.hardware.type.watch" />
+  <!-- <uses-feature android:name="android.hardware.type.watch" /> -->
 
   <application
     android:name=".MainApplication"
