--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,8 +40,8 @@ hermesEnabled=true
 
 MYAPP_UPLOAD_STORE_FILE=bitcoin-balance.keystore
 
- MYAPP_UPLOAD_KEY_ALIAS=bitcoinBalance
+MYAPP_UPLOAD_KEY_ALIAS=bitcoinBalance
 
- MYAPP_UPLOAD_STORE_PASSWORD=********
+MYAPP_UPLOAD_STORE_PASSWORD=********
 
- MYAPP_UPLOAD_KEY_PASSWORD=*******
+MYAPP_UPLOAD_KEY_PASSWORD=***********
