bug fixed when there is only one registered address

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,6 +42,6 @@ MYAPP_UPLOAD_STORE_FILE=bitcoin-balance.keystore
 
 MYAPP_UPLOAD_KEY_ALIAS=bitcoinBalance
 
-MYAPP_UPLOAD_STORE_PASSWORD=********
+MYAPP_UPLOAD_STORE_PASSWORD=***********
 
-MYAPP_UPLOAD_KEY_PASSWORD=***********
+MYAPP_UPLOAD_KEY_PASSWORD=*********
