--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-wear-connectivity": "^0.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
